<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.bcit.cst.kathleen.littlebrownjobs.VoteActivity">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="41dp"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/photo"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/description"
        android:layout_below="@+id/description"
        android:layout_marginTop="46dp"
        android:text="@string/location"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/location_label"
        android:layout_below="@+id/location_label"
        android:layout_marginTop="36dp"
        android:text="@string/date_sighting"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/date_label"
        android:layout_below="@+id/location_label"
        android:text="Location"/>

    <TextView
        android:id="@+id/description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Description"
        android:layout_below="@+id/description"
        android:layout_alignStart="@+id/description"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date"
        android:layout_below="@+id/date_label"
        android:layout_alignStart="@+id/date_label"/>

    <CheckedTextView
        android:id="@+id/checkedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/description"
        android:layout_below="@+id/date"
        android:layout_marginTop="72dp"
        android:text="CheckedTextView"/>

</RelativeLayout>
